--- a/src/Styles/_header.scss
+++ b/src/Styles/_header.scss
@@ -1,13 +1,24 @@
 header {
   text-align: center;
+  margin-top: 100px;
   h1 {
     text-align: center;
   }
   p {
     text-align: center;
+    font-size: 24px;
   }
   button {
-    &:hover {
+    font-size: 14px;
+    margin: 8px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    width: 80px;
+    height: 30px;
+    background-color: lightseagreen;
+    &:hover,
+    &:focus {
       background-color: orange;
     }
   }
