--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -4,6 +4,7 @@ body {
   @import "navigation";
   @import "header";
   @import "signup";
+  @import "login";
   @import "post";
   @import "feed";
 }
