--- a/src/Styles/_header.scss
+++ b/src/Styles/_header.scss
@@ -1,14 +1,14 @@
 header {
   text-align: center;
   margin-top: 100px;
-  h1 {
+  .app-title {
     text-align: center;
   }
-  p {
+  .app-desc {
     text-align: center;
     font-size: 24px;
   }
-  button {
+  .signup-login {
     font-size: 14px;
     margin: 8px;
     border: none;
