--- a/src/Styles/_post.scss
+++ b/src/Styles/_post.scss
@@ -1,12 +1,32 @@
 .recipepost {
-  width: 70%;
-  height: 70%;
+  width: 520px;
+  height: 520px;
   border: 2px solid black;
-  img {
-    width: 75%;
-    height: 75%;
+  text-align: center;
+  margin: 35px auto;
+  .user-pic-container {
+    width: 70px;
+    height: 70px;
+    margin: 10px;
+    float: left;
+    .user-pic {
+      border-radius: 50%;
+      height: 70px;
+      width: 70px;
+    }
   }
-  margin: 30px auto;
+  .post-user {
+    float: left;
+    margin-left: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .recipe-picture {
+    width: 370px;
+    height: 370px;
+    margin: 10px auto;
+  }
   &:hover,
   &:visted,
   &:active {
@@ -15,5 +35,8 @@
   a {
     text-decoration: none;
     color: black;
+  }
+  .caption {
+    margin-top: 0;
   }
 }
