--- a/src/Styles/_profile.scss
+++ b/src/Styles/_profile.scss
@@ -20,6 +20,20 @@
     width: 85%;
     margin: 30px auto;
   }
+  .add-recipe {
+    font-size: 14px;
+    margin: 8px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    width: 120px;
+    height: 30px;
+    background-color: lightseagreen;
+    &:hover,
+    &:focus {
+      background-color: orange;
+    }
+  }
 }
 
 .user-recipes {
@@ -29,10 +43,9 @@
   .my-recipes {
     font-size: 24px;
   }
-}
-
-.thumbnails-container {
-  display: flex;
-  flex-direction: row;
-  margin: 20px;
+  .thumbnails-container {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+  }
 }
